конфигурация инфракструктуры перемещена в targets.json. Добавлены тесты для АРМ Помощника АУ